RD-2007-05-25-0: Enhancem.: Enhanced test to cover Issue 2250
                 Review:    JG

RN-2007-05-23-0: Enhancem.: o Added new test for RFE 6355875 (issue no 916)

JG-2007-05-23-1: Bugfix:    Fixed cleanup function of consumable resources test.

JG-2007-05-23-0: Bugfix:    Fixed reporting queue state test.
                 Enhancem.: Extended qconf -purge tests.
                 Review:    RD

RD-2007-05-22-0: Bugfix:    Fixed IZ 2050 after function signature changes

RD-2007-05-21-0: Enhancem.: Added AR qmaster consistency checks
                 Review:    JG

PJ-2007-05-21-0  Enhancem:  Added functions file sge_ar.62.tcl and qrsub test
                 Review:    JG

RN-2007-05-21-0: Enhancem.: o Added test for CR 6422335 (issue no 2050)
                            o changed vi command for adding complex in
                              sge_procedures.60.tcl
                            o Changed del_prj(), del_access_list(),
                              set_complex() to use raise_error variable
                 Review:    JG

CR-2007-05-14-0: Enhancem.: o removed not needed parameter in compile_source()
                            o added compile support for independent addtional
                              clusters
                            o new procedure: operate_add_cluster() (start
                              operation for specified cluster only)
                            o new procedure: get_additional_cluster_type()
                              return type of cluster ("cell" or "independent")
                 Review:    MD

CR-2007-05-11-0: Enhancem.: o Added configuration support for additional cell
                              and addtional independed clusters.
                            o Removed needless spawn output at testsuite startup.
                 Review:    JG

MP-2007-05-11-0: Enhancem.: Added test for CR 6328064. Checks to see if command
                            line parameters override script defaults for qsub.